--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.0.3",
+    "firebase": "^10.4.0",
     "framer-motion": "^2.9.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
